@@ -1,7 +1,0 @@
-*.dll
-*.la
-*.lo
-.deps
-.dirstamp
-.libs
-makefile
